css/demo.css
.layout{width: 965px; margin: 0 auto;}

#outer_top_head{float: left; width: 100%; background: url(../images/header_bg.gif) repeat-x 0 bottom; padding: 0 0 10px 0; margin-bottom: 10px;}
#top_head{width: 965px; margin: 0 auto;}

ul.icons{float: right; width: auto;list-style: none; padding: 4px 0 0 0;}
ul.icons li{float: left; width: auto; padding: 0 5px 0 0;}

#header{float: left; width: 100%; }
.logo{float: left; width: auto; padding: 21px 292px 0 293px;}

.see_more_btn {
  float:right;
  color: #000;
  background: #fff;
  border: 1px solid #000;
  font: 14px/22px 'NeutraDisplayBold',Georgia,Times New Roman,times,serif;
  word-spacing: 1px;
  text-transform: uppercase;
  padding: 0 10px 0 11px;
}
.shop_btn {position: absolute; bottom: 18px; right: 18px;color: #000; background: #fff;border: 1px solid #000;  font: 14px/22px 'NeutraDisplayBold',Georgia,Times New Roman,times,serif; word-spacing: 1px; text-transform: uppercase;padding: 0 10px 0 11px;}
.shop_btn:hover{color: #fff; background: #000; border-color: #fff; }

.article_sec{width: 965px; margin: 0 0 0 0;}
.article_sec h2{color: #000; text-align: center; font: 56px/65px 'MonotypeModernStdBoldItalic',Georgia,Times New Roman,times,serif; border-bottom: 1px solid #000; letter-spacing: -4px;}
.article_sec h3{color: #000; text-align: center; font: 40px/40px 'ModernMTStdExtendedRegular',Georgia,Times New Roman,times,serif; }
.article_sec h3 strong{ display: block; font: 27px/29px 'MonotypeModernStdBoldItalic',Georgia,Times New Roman,times,serif; padding: 9px 0 0 0; }
.article_sec p{color: #000; font: italic 15px/22px Georgia,Times New Roman,times,serif; margin: 15px 0;}
.article_sec .img{float: left; width: auto; padding: 0 9px 0 9px;}
.article_sec .look{position: absolute; width: 148px; left: 0; top: 0; height: 100%; background: url(../images/look_of_the_day.png) no-repeat 0 0;}
.article_sec .look strong{display: block;text-align: center; font: 20px/24px 'ModernMTStdExtendedRegular',Georgia,Times New Roman,times,serif; padding: 13px 0 0 0;}
.article_sec .look span{display: block;text-align: center; font: 14px/20px 'NeutraDisplayAltBold',Georgia,Times New Roman,times,serif;}
.article_sec .shop_btn{bottom: 13px;margin-left: 5px; display: inline;}

#footer{float: left; width: 100%; border-top: 2px solid #000; margin: 45px 0 0 0; padding-bottom: 20px;}

ul.footer_nav{float: left; width: auto;list-style: none; padding:21px 5px 21px;}
ul.footer_nav li{float: left; width: auto; padding: 0 62px 0 0;}
ul.footer_nav li.last{padding-right: 0;}
ul.footer_nav li a{color: #000; font-size: 14px; line-height: 22px;}
ul.footer_nav li a:hover{text-decoration: underline;}

.copyright{text-align: center; color: #c6c6c6; font-size: 14px; float: left; width: 100%;}
.copyright a{color: #c6c6c6;}
.copyright a:hover{text-decoration: underline;}

p {margin-bottom:10px;}
#header {
  z-index:1000;
}
#get-it-now-container {
  float:right;
  margin:0 15px 15px 0;
  width:300px;
  text-align:center;
  position:relative;
}
#get-it-now-container img {
  margin-bottom:10px;
}
#get-it-now-container .shop_btn {
  bottom:15px;
  right:13px;
}
#see-more-container {
  position:relative;
}
.clear {
  clear:both;
}

/* checkout frame styles */
iframe#checkout {
  border:none;
  overflow:hidden;
  width:100%;
}

/* responsive styles! */
/* Smartphones (portrait and landscape) ----------- */
@media only screen
and (min-device-width : 320px)
and (max-device-width : 960px) {
  .layout,
  .article_sec,
  #top_head
  {
    width: 95%;
    clear: both;
  }
  .logo {
    padding: 0;
    display: block;
    margin: auto;
    float: none;
    width: 95%;
  }
  .logo img {
    width: 100%;
  }
}

/* Smartphones (landscape) ----------- */
@media only screen
and (min-width : 321px)
and (max-width: 568px) {
}
/* Smartphones (portrait) ----------- */
@media only screen
and (max-width : 320px)
and (max-height : 440px) {
}
@media only screen
and (max-width : 320px)
and (min-height : 441px) {
}
/* tablets! (ipad) */
@media only screen
and (min-width : 768px)
and (max-width : 1024px) {
}
/* ipad landscape */
@media only screen
and (min-width: 769px)
and (max-width: 1024px) {
}
/* ipad portrait */
@media only screen
and (max-width: 768px)
and (min-width: 569px){
}


/** frame.responsive.css overrides **/

/* responsive styles for non-modals
 =================================== */
/* Smartphones (portrait and landscape) */
@media only screen
and (min-width : 320px)
and (max-width : 622px) {
  .product-grid {
    margin-top: 30px;
  }
  .product-grid .product {
    float: none;
    margin: 5px auto;
  }
}

